# prism

./: .gitattributes  .gitignore  CLAUDE.md  README.md  app.py  pyproject.toml  requirements.txt  run.bat  run.sh
.github/workflows/: ci.yml
docs/: RCA_fred_key_live_mode.md  RCA_fred_ssl_cert.md  RCA_pdf_parser_unsupported_products.md  weekly_progress.md
prism/: __init__.py  _env.py  bond_floor.py  market_data.py  models.py  pdf_parser.py  report.py  risk.py  vol_surface.py
prism/pricing/: __init__.py  black_scholes.py  monte_carlo.py  payoffs.py
prism_ui/: __init__.py  charts.py  config.py  formatting.py  narrative.py
scripts/: parse_test_pdfs.py
test_pdfs/: SOURCES.md
tests/: conftest.py  test_black_scholes.py  test_dividend_yield.py  test_fred_fallback_rca.py  test_fred_ssl_rca003.py  test_market_data_live.py  test_market_data_offline.py  test_monte_carlo.py  test_pdf_parser.py  test_pdf_parser_rca.py  test_pdf_parser_security.py  test_phase2_products.py  test_products.py  test_report_pdf.py  test_risk.py  test_ui_apptest.py  test_ui_fred_fallback_rca.py  test_ui_refusal_rca.py
