[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prism-pricing"
version = "0.1.0"
description = "Structured product pricing & decomposition engine (autocallables, reverse convertibles)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Sangjun Yum" }]
keywords = ["structured-products", "autocallable", "reverse-convertible", "pricing", "monte-carlo"]

dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.2",
    "yfinance>=0.2.40",
    "fredapi>=0.5",
]

[project.optional-dependencies]
app = [
    "streamlit>=1.40",
    "plotly>=5.20",
    "anthropic>=0.40",
    "reportlab>=4.0",
]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["prism*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
